--- a/Proyecto.html
+++ b/Proyecto.html
@@ -9,14 +9,27 @@
 <body class="bg-slate-100">
 
     <nav class="hidden" id="barra-de-navegacion"> <!--Barra de navegacion-->
-        <div class="">
-           <div id="username">
+        <div class="flex flex-col bg-blue-700 w-40 absolute inset-y-0 left-0 p-5 space-y-10">
+           <h2 class="text-center text-white mb-20">Dashboard Informático</h2>
+           <div class="flex items-center space-x-2">
+            <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 10h16M8 14h8m-4-7V4M7 7V4m10 3V4M5 20h14a1 1 0 0 0 1-1V7a1 1 0 0 0-1-1H5a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1Z"/>
+            </svg>     
+            <p class="text-white">Calendario</p>   
+           </div>
 
+           <div class="flex items-center space-x-2">
+            <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 9h6m-6 3h6m-6 3h6M6.996 9h.01m-.01 3h.01m-.01 3h.01M4 5h16a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1Z"/>
+              </svg>
+            <p class="text-white">Eventos</p>              
            </div>
         </div>
     </nav>
     <main >
+      <div id="username" class="absolute inset-y-0 right-0">
 
+      </div>
     </main>
 
     <section class="max-w-screen-lg mx-auto"> <!--Login-->
@@ -46,8 +59,8 @@ alumns = [
     {
         name: "William",
         lastname: "Pinto",
-        cedula: 28769872,
-        password: "tumama",
+        cedula: 1,
+        password: "1",
     },
     {
         name: "Miguel",
