--- a/index.html
+++ b/index.html
@@ -8,39 +8,62 @@
 </head>
 <body class="bg-slate-100">
 <section class="flex">
-    <nav class="hidden" id="barra-de-navegacion"> <!--Barra de navegacion-->
+    <!--Barra de navegacion-->
+    <nav class="hidden" id="barra-de-navegacion"> 
         <div class="flex flex-col bg-blue-700 sticky top-0 w-40 h-screen py-5 space-y-10">
-           <h2 class="text-center text-white mb-20">Dashboard Informático</h2>
+           <h2 class="text-center text-white mb-20">Dashboard Informático</h2> 
+           <!--Seccion de calendario-->
            <div id="section-calender" onclick="selectCalendar()" class="flex items-center space-x-2 cursor-pointer h-14 p-5">
             <svg id="icon-calender" class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 10h16M8 14h8m-4-7V4M7 7V4m10 3V4M5 20h14a1 1 0 0 0 1-1V7a1 1 0 0 0-1-1H5a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1Z"/>
             </svg>     
-            <p id="text-calender" class="text-white" >Calendario</p>   
-           </div>
-
+            <p id="text-calender" class="text-white">Calendario</p>   
+           </div> <!--Final de seccion de calendario-->
+           <!--Seccion de eventos-->
            <div class="flex items-center space-x-2 p-5">
             <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 9h6m-6 3h6m-6 3h6M6.996 9h.01m-.01 3h.01m-.01 3h.01M4 5h16a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1Z"/>
               </svg>
             <p class="text-white">Eventos</p>              
-           </div>
+           </div> <!--Final se seccion de eventos-->
         </div>
-    </nav>
+    </nav> <!--Final de la Barra de navegacion-->
 
     <main class="w-screen">
+
       <div id="username" class="flex justify-end sticky top-0">
       </div>
-      <section id="Calendario" class="hidden"> <!--seccion de administrador-->
+      <section id="calenderAministrator" class="hidden"> <!--seccion de administrador-->
+        <h1 class="text-2xl text-center mt-3">Junio 2024</h1>
+        <!--Calendario administrador-->
+        <div class="mt-5 grid grid-cols-7 grid-rows-6 max-w-screen-md mx-auto h-80 broder-solid border-2 border-sky-500 rounded-lg text-center justify-center items-center">
+            <span class="col-start-1">Lunes</span><span>Martes</span><span>Miercoles</span><span>Jueves</span><span>Viernes</span><span>Sabado</span><span >Domingo</span>
+            <span class="col-start-5 hover:bg-sky-500 hover:rounded-md" id="dia1">1</span><span id="dia2">2</span><span>3</span><span>4</span><span>5</span><span>6</span><span>7</span><span>8</span><span>9</span><span>10</span><span>11</span><span>12</span><span>13</span><span>14</span><span>15</span><span>16</span><span>17</span><span>18</span><span>19</span><span>20</span><span>21</span><span>22</span><span>23</span><span>24</span><span>25</span><span>26</span><span>27</span><span>28</span><span>29</span><span>30</span>
+        </div> <!--Final de calendario administrador-->
+        <dialog id="modal1" class="w-80 h-96 rounded-lg p-5"><!--Modal-->          
+            <form method="dialog">
+                <button class="bg-black text-white hover:bg-red-400 px-3">X</button>
+                <h2 class="text-xl text-center mb-4">Evento</h2>
+                <textarea id="junio1" class="w-full h-56 resize-none outline-none" placeholder="Escribe el Evento..."></textarea>
+                <input type="submit"onclick="submitJune1()" class="bg-blue-400 hover:bg-blue-600 text-white font-bold py-2 px-2 rounded cursor-pointer">
+            </form>
+        </dialog>
+      </section> <!--Final de seccion de administrador-->
+
+      <section id="calenderStudent" class="hidden"> <!--Secccion de estudiante-->
         <h1 class="text-2xl text-center mt-3">Junio 2024</h1>
         <div class="mt-5 grid grid-cols-7 grid-rows-6 max-w-screen-md mx-auto h-80 broder-solid border-2 border-sky-500 rounded-lg text-center justify-center items-center">
             <span class="col-start-1">Lunes</span><span>Martes</span><span>Miercoles</span><span>Jueves</span><span>Viernes</span><span>Sabado</span><span >Domingo</span>
-            <span class="col-start-5 hover:bg-sky-500 hover:rounded-md">1</span><span>2</span><span>3</span><span>4</span><span>5</span><span>6</span><span>7</span><span>8</span><span>9</span><span>10</span><span>11</span><span>12</span><span>13</span><span>14</span><span>15</span><span>16</span><span>17</span><span>18</span><span>19</span><span>20</span><span>21</span><span>22</span><span>23</span><span>24</span><span>25</span><span>26</span><span>27</span><span>28</span><span>29</span><span>30</span>
+            <span class="col-start-5 hover:bg-sky-500 hover:rounded-md select-none" onclick="getJune1()">1</span><span id="dia2">2</span><span>3</span><span>4</span><span>5</span><span>6</span><span>7</span><span>8</span><span>9</span><span>10</span><span>11</span><span>12</span><span>13</span><span>14</span><span>15</span><span>16</span><span>17</span><span>18</span><span>19</span><span>20</span><span>21</span><span>22</span><span>23</span><span>24</span><span>25</span><span>26</span><span>27</span><span>28</span><span>29</span><span>30</span>
         </div>
-      </section>
+        <div id="eventoGuardadoJune1">
+
+        </div>
+      </section> <!--Final de seccion de estudiante-->
     </main>
 </section>
-    <section class="max-w-screen-lg mx-auto"> <!--Login-->
 
+    <section class="max-w-screen-lg mx-auto"> <!--Login-->
         <div id="login" class="mt-20 grid grid-cols-12">
             <div class="col-span-7 max-w-lg bg-white rounded-lg p-10">
                 <h1 class="text-center text-2xl mb-7">Bienvenido</h1>
@@ -61,8 +84,6 @@
             </div>
         </div>
    </section>
-
-
 
 </body>
 <script>
@@ -123,14 +144,17 @@ administrator = [
         password: "admi2",
     },
 ]
+
 var getAlumn;
 var getTeacher;
 var getAdministrator;
+var userType = document.getElementsByName('userType');
+
 
 function validateDate() { 
     let IdentityCard = document.getElementById('identityCard').value;
     let password = document.getElementById('password').value;
-    let userType = document.getElementsByName('userType');
+    
 
     for(let i = 0; i < userType.length; i++) { // Definiendo que tipo de usuario escogio el cliente
         if(userType[i].checked) {
@@ -198,10 +222,31 @@ function validateDate() {
 }
 
 function selectCalendar() {
-    document.getElementById('Calendario').style.display = "block";
-    document.getElementById('section-calender').className= "bg-blue-400 flex items-center space-x-2 cursor-pointer h-14 p-5";
+    if(userType == "administrator") {
+        document.getElementById('calenderAministrator').style.display = "block";
+        document.getElementById('section-calender').className= "bg-blue-400 flex items-center space-x-2 cursor-pointer h-14 p-5";
+    } else if(userType == "student") {
+        document.getElementById('calenderStudent').style.display = "block"
+        document.getElementById('section-calender').className = "bg-blue-400 flex items-center space-x-2 cursor-pointer h-14 p-5";
+    }
 }
 
+let june1 = document.querySelector('#dia1'); 
+let modal1 = document.querySelector('#modal1')
+june1.addEventListener("click", ()=> {
+modal1.showModal();
+})
+
+function submitJune1() { // Esta funcion se hace al hacer click en el boton de enviar del modal
+    let junio1 = document.getElementById("junio1").value // Toma lo escrito en el modal
+    localStorage.setItem('1deJunio', junio1 ); // Guarda en local storage lo escrito en el modal
+}
+
+function getJune1() {
+    let getJune1 = document.getElementById('eventoGuardadoJune1'); // Toma el div donde se traera lo guardado en el local storage
+    getJune1.innerHTML = `${localStorage.getItem('1deJunio')}`; // Trae mediante la clave 1deJunio lo escrito en el modal1
+    getJune1.className = "bg-slate-300 w-52 h-52 text-center text-xl p-5 mt-5 ml-7 rounded-lg border-double border-4 hover:border-sky-500"; // Le da estilo al div donde se guardo lo escrito
+}
 </script>
 </html>
  
