Agregar eventos a todo el mes de junio

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="flex flex-col bg-blue-700 sticky top-0 w-40 h-screen py-5 space-y-10">
            <h2 class="text-center text-white mb-20">Dashboard Informático</h2> 
            <!--Seccion de calendario-->
-           <div id="section-calender" onclick="selectCalendar()" class="flex items-center space-x-2 cursor-pointer h-14 p-5">
+           <div id="section-calender" onclick="selectCalendar()" class="flex items-center space-x-2 cursor-pointer h-14 p-5 hover:bg-blue-400">
             <svg id="icon-calender" class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 10h16M8 14h8m-4-7V4M7 7V4m10 3V4M5 20h14a1 1 0 0 0 1-1V7a1 1 0 0 0-1-1H5a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1Z"/>
             </svg>     
@@ -36,27 +36,27 @@
       <section id="calenderAministrator" class="hidden"> <!--seccion de administrador-->
         <h1 class="text-2xl text-center mt-3">Junio 2024</h1>
         <!--Calendario administrador-->
-        <div class="mt-5 grid grid-cols-7 grid-rows-6 max-w-screen-md mx-auto h-80 broder-solid border-2 border-sky-500 rounded-lg text-center justify-center items-center">
+        <div class="mt-5 grid grid-cols-7 grid-rows-6 max-w-screen-md mx-auto h-80 bg-gradient-to-r from-cyan-200 to-blue-500  rounded-lg text-center justify-center items-center">
             <span class="col-start-1">Lunes</span><span>Martes</span><span>Miercoles</span><span>Jueves</span><span>Viernes</span><span>Sabado</span><span >Domingo</span>
-            <span class="col-start-5 hover:bg-sky-500 hover:rounded-md" id="dia1">1</span><span id="dia2">2</span><span>3</span><span>4</span><span>5</span><span>6</span><span>7</span><span>8</span><span>9</span><span>10</span><span>11</span><span>12</span><span>13</span><span>14</span><span>15</span><span>16</span><span>17</span><span>18</span><span>19</span><span>20</span><span>21</span><span>22</span><span>23</span><span>24</span><span>25</span><span>26</span><span>27</span><span>28</span><span>29</span><span>30</span>
+            <span id="dia1" class="col-start-5 hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">1</span><span id="dia2" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">2</span><span id="dia3" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">3</span><span id="dia4" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">4</span><span id="dia5" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">5</span><span id="dia6" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">6</span><span id="dia7" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">7</span><span id="dia8" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">8</span><span id="dia9" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">9</span><span id="dia10" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">10</span><span id="dia11" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">11</span><span id="dia12" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">12</span><span id="dia13" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">13</span><span id="dia14" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">14</span><span id="dia15" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">15</span><span id="dia16" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">16</span><span id="dia17" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">17</span><span id="dia18" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">18</span><span id="dia19" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">19</span><span id="dia20" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">20</span><span id="dia21" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">21</span><span id="dia22" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">22</span><span id="dia23" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">23</span><span id="dia24" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">24</span><span id="dia25" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">25</span><span id="dia26" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">26</span><span id="dia27" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">27</span><span id="dia28" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">28</span><span id="dia29" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">29</span><span id="dia30" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">30</span>
         </div> <!--Final de calendario administrador-->
-        <dialog id="modal1" class="w-80 h-96 rounded-lg p-5"><!--Modal-->          
+        <dialog id="modal" class="w-80 h-96 rounded-lg p-5"><!--Modal-->          
             <form method="dialog">
                 <button class="bg-black text-white hover:bg-red-400 px-3">X</button>
                 <h2 class="text-xl text-center mb-4">Evento</h2>
-                <textarea id="junio1" class="w-full h-56 resize-none outline-none" placeholder="Escribe el Evento..."></textarea>
-                <input type="submit"onclick="submitJune1()" class="bg-blue-400 hover:bg-blue-600 text-white font-bold py-2 px-2 rounded cursor-pointer">
+                <textarea id="value" class="w-full h-56 resize-none outline-none" placeholder="Escribe el Evento..."></textarea>
+                <input id="submit" type="submit" class="bg-blue-400 hover:bg-blue-600 text-white font-bold py-2 px-2 rounded cursor-pointer">
             </form>
         </dialog>
       </section> <!--Final de seccion de administrador-->
 
       <section id="calenderStudent" class="hidden"> <!--Secccion de estudiante-->
         <h1 class="text-2xl text-center mt-3">Junio 2024</h1>
-        <div class="mt-5 grid grid-cols-7 grid-rows-6 max-w-screen-md mx-auto h-80 broder-solid border-2 border-sky-500 rounded-lg text-center justify-center items-center">
+        <div class="mt-5 grid grid-cols-7 grid-rows-6 max-w-screen-md mx-auto h-80 bg-gradient-to-r from-cyan-200 to-blue-500  rounded-lg text-center justify-center items-center">
             <span class="col-start-1">Lunes</span><span>Martes</span><span>Miercoles</span><span>Jueves</span><span>Viernes</span><span>Sabado</span><span >Domingo</span>
-            <span class="col-start-5 hover:bg-sky-500 hover:rounded-md select-none" onclick="getJune1()">1</span><span id="dia2">2</span><span>3</span><span>4</span><span>5</span><span>6</span><span>7</span><span>8</span><span>9</span><span>10</span><span>11</span><span>12</span><span>13</span><span>14</span><span>15</span><span>16</span><span>17</span><span>18</span><span>19</span><span>20</span><span>21</span><span>22</span><span>23</span><span>24</span><span>25</span><span>26</span><span>27</span><span>28</span><span>29</span><span>30</span>
+            <span class="col-start-5 hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer" id="select1">1</span><span id="select2" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">2</span><span id="select3" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">3</span><span id="select4" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">4</span><span id="select5" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">5</span><span id="select6" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">6</span><span id="select7" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">7</span><span id="select8" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">8</span><span id="select9" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">9</span><span id="select10" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">10</span><span id="select11" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">11</span><span id="select12" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">12</span><span id="select13" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">13</span><span id="select14" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">14</span><span id="select15" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">15</span><span id="select16" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">16</span><span id="select17" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">17</span><span id="select18" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">18</span><span id="select19" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">19</span><span id="select20" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">20</span><span id="select21" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">21</span><span id="select22" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">22</span><span id="select23" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">23</span><span id="select24" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">24</span><span id="select25" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">25</span><span id="select26" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">26</span><span id="select27" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">27</span><span id="select28" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">28</span><span id="select29" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">29</span><span id="select30" class="hover:bg-sky-500 hover:rounded-lg mx-6 hover:text-white cursor-pointer">30</span>
         </div>
-        <div id="eventoGuardadoJune1">
+        <div id="showSavedEvent"> <!--Seccion donde se muestran los eventos-->
 
         </div>
       </section> <!--Final de seccion de estudiante-->
@@ -150,15 +150,15 @@ var getTeacher;
 var getAdministrator;
 var userType = document.getElementsByName('userType');
 
-
 function validateDate() { 
     let IdentityCard = document.getElementById('identityCard').value;
     let password = document.getElementById('password').value;
-    
+    userType = document.getElementsByName('userType');
 
-    for(let i = 0; i < userType.length; i++) { // Definiendo que tipo de usuario escogio el cliente
-        if(userType[i].checked) {
-            userType = userType[i].value;
+    for(let i = 0; i < userType.length; i++) { // Definiendo que tipo de usuario escogio el usuario
+        if(userType[i].checked) { // Verifica cual tipo de usuario se selecciono
+            userType = userType[i].value; // Guarda el tipo de usuario seleccionado
+            console.log(userType)
             break;
         }
     }
@@ -221,32 +221,40 @@ function validateDate() {
     }   
 }
 
-function selectCalendar() {
-    if(userType == "administrator") {
-        document.getElementById('calenderAministrator').style.display = "block";
+function selectCalendar() { // Esta funcion se ejecuta al darle click a la seccion de calendario del nav
+    if(userType == "administrator") { // Si el usuario entra como administrador, entrara en esta condicional
+        document.getElementById('calenderAministrator').style.display = "block"; // Muestra el calendario del administrador
         document.getElementById('section-calender').className= "bg-blue-400 flex items-center space-x-2 cursor-pointer h-14 p-5";
-    } else if(userType == "student") {
-        document.getElementById('calenderStudent').style.display = "block"
+    } else if(userType == "student") { // Si el usuario entra como estudiante, entrara en esta condicional
+        document.getElementById('calenderStudent').style.display = "block" // Muestra el calendario del administrador
         document.getElementById('section-calender').className = "bg-blue-400 flex items-center space-x-2 cursor-pointer h-14 p-5";
     }
 }
 
-let june1 = document.querySelector('#dia1'); 
-let modal1 = document.querySelector('#modal1')
-june1.addEventListener("click", ()=> {
-modal1.showModal();
-})
-
-function submitJune1() { // Esta funcion se hace al hacer click en el boton de enviar del modal
-    let junio1 = document.getElementById("junio1").value // Toma lo escrito en el modal
-    localStorage.setItem('1deJunio', junio1 ); // Guarda en local storage lo escrito en el modal
+for(i = 1; i < 31; i++){      
+    let june = document.querySelector('#dia'+ i); // Toma los dias de junio del administrador    
+    let modal = document.querySelector('#modal'); // Toma la ventana emergente
+    june.addEventListener("click", ()=> { // Cuando le de click a algun dia de junio ejecuta esta funcion
+        select = june.id; // Toma el dia seleccionado
+        modal.showModal(); // Le da estilos al modal  
+        submit = document.getElementById('submit'); // Toma el buton de enviar del modal
+        submit.addEventListener("click", ()=> { // Cuando le de click al boton de enviar se ejecuta esta funcion
+            value = document.getElementById('value').value // Toma lo escrito en el modal
+            localStorage.setItem(select+'junio', value); // Guarda lo escrito en el local storage 
+        })
+    })   
 }
 
-function getJune1() {
-    let getJune1 = document.getElementById('eventoGuardadoJune1'); // Toma el div donde se traera lo guardado en el local storage
-    getJune1.innerHTML = `${localStorage.getItem('1deJunio')}`; // Trae mediante la clave 1deJunio lo escrito en el modal1
-    getJune1.className = "bg-slate-300 w-52 h-52 text-center text-xl p-5 mt-5 ml-7 rounded-lg border-double border-4 hover:border-sky-500"; // Le da estilo al div donde se guardo lo escrito
-}
+for(i = 1; i < 31; i++){
+    let dias = document.querySelector("#select" + i); // Toma los dias de junio del estudiante
+    let june = document.querySelector('#dia'+ i); // Toma los dias de junio del administrador  
+    dias.addEventListener("click", ()=> { // Cuando le de click a algun dia de junio ejecuta esta funcion
+        select = june.id;  // Toma el dia seleccionado
+        let showSavedEvent = document.getElementById('showSavedEvent'); // Toma el div donde se mostrara el evento
+        showSavedEvent.innerHTML = `${localStorage.getItem(select +"junio")}` // Escribe en el div el evento guardado
+        showSavedEvent.className = "bg-slate-300 w-52 h-52 text-center text-xl p-5 mt-5 ml-7 rounded-lg border-double border-4 hover:border-sky-500" // Le da estilos al div
+    })
+}  
 </script>
 </html>
  
